[package]
name = "khalway"
version = "0.6.0"
edition = "2021"

[dependencies]
chrono = "0.4"  # For date and time handling
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"  # For JSON handling
tokio = { version = "1", features = ["full"] }  # For async runtime

[[bin]]
name = "khalway"
path = "./src/main.rs"
